syntax = "proto2";

message RadioRequest {
    repeated string uris = 0x1;
    optional int32 salt = 0x2;
    optional int32 length = 0x4;
    optional string stationId = 0x5;
    repeated string lastTracks = 0x6;
}

message MultiSeedRequest {
    repeated string uris = 0x1;
}

message Feedback {
    optional string uri = 0x1;
    optional string type = 0x2;
    optional double timestamp = 0x3;
}

message Tracks {
    repeated string gids = 0x1;
    optional string source = 0x2;
    optional string identity = 0x3;
    repeated string tokens = 0x4;
    repeated Feedback feedback = 0x5;
}

message Station {
    optional string id = 0x1;
    optional string title = 0x2;
    optional string titleUri = 0x3;
    optional string subtitle = 0x4;
    optional string subtitleUri = 0x5;
    optional string imageUri = 0x6;
    optional double lastListen = 0x7;
    repeated string seeds = 0x8;
    optional int32 thumbsUp = 0x9;
    optional int32 thumbsDown = 0xa;
}

message Rules {
    optional string js = 0x1;
}

message StationResponse {
    optional Station station = 0x1;
    repeated Feedback feedback = 0x2;
}

message StationList {
    repeated Station stations = 0x1;
}

message LikedPlaylist {
    optional string uri = 0x1;
}

