syntax = "proto2";

message DecorationData {
    optional string username = 0x1;
    optional string full_name = 0x2;
    optional string image_url = 0x3;
    optional string large_image_url = 0x5;
    optional string first_name = 0x6;
    optional string last_name = 0x7;
    optional string facebook_uid = 0x8;
}

